MediaService Unit Test, 86% Coverage