@@ -11,9 +11,10 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import pjatk.edu.pl.backend.client.MediaClient;
 import pjatk.edu.pl.backend.service.MediaService;
-import pjatk.edu.pl.backend.service.mapper.MediaMapper;
+import pjatk.edu.pl.backend.service.mapper.EntityMapper;
 import pjatk.edu.pl.data.dto.*;
 import pjatk.edu.pl.data.exception.MediaClientException;
+import pjatk.edu.pl.data.exception.MediaNotFoundException;
 import pjatk.edu.pl.data.exception.MediaObjectIncomplete;
 import pjatk.edu.pl.data.model.Date;
 import pjatk.edu.pl.data.model.Genre;
@@ -22,6 +23,8 @@ import pjatk.edu.pl.data.model.Title;
 import pjatk.edu.pl.data.repository.MediaRepository;
 
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -37,7 +40,7 @@ class MediaServiceTest {
     private MediaRepository mediaRepository;
 
     @Mock
-    private MediaMapper mediaMapper;
+    private EntityMapper<Media, MediaDto> mediaMapper;
 
     @InjectMocks
     private MediaService mediaService;
@@ -138,42 +141,121 @@ class MediaServiceTest {
     }
 
     @Test
-    void getMediaByDateRange_Success() {
-        List<MediaDto> dtos = Collections.singletonList(testMediaDto);
-        List<Media> media = Collections.singletonList(testMedia);
+    void getMediaByDateRange_WhenFromDateIsNull_ThrowsException() {
+        assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByDateRange(null, 20200201));
 
-        when(mediaClient.getAnimeByDateRange(2021, 2021)).thenReturn(dtos);
-        when(mediaRepository.findByDateRange(2021, 2021)).thenReturn(media);
-        when(mediaMapper.toEntity(testMediaDto)).thenReturn(testMedia);
-        when(mediaRepository.findByAnilistId(1)).thenReturn(Optional.empty());
-
-        List<Media> result = mediaService.getMediaByDateRange(2021, 2021);
-
-        assertFalse(result.isEmpty());
-        assertEquals(1, result.size());
-        assertEquals(2021, result.get(0).getStartDate().getYear());
+        verify(mediaClient, never()).getAnimeByDateRange(any(), any());
+        verify(mediaRepository, never()).findByDateRange(anyInt(), anyInt());
+        verify(mediaRepository, never()).save(any(Media.class));
     }
 
     @Test
-    void getFilteredMedia_WithGenreAndYearFilter() {
-        MediaFilterDto filters = new MediaFilterDto();
-        filters.setGenreFilter("Action");
-        filters.setYearFilter("2021");
-        filters.setEpisodeFilter("12");
-        filters.setPage(0);
+    void getMediaByDateRange_WhenToDateIsNull_ThrowsException() {
+        assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByDateRange(20200101, null));
 
-        testMedia.setGenres(Set.of(new Genre("Action")));
+        verify(mediaClient, never()).getAnimeByDateRange(any(), any());
+        verify(mediaRepository, never()).findByDateRange(anyInt(), anyInt());
+        verify(mediaRepository, never()).save(any(Media.class));
+    }
 
-        Page<Media> page = new PageImpl<>(Collections.singletonList(testMedia));
-        when(mediaRepository.findAll(any(), any(PageRequest.class))).thenReturn(page);
+    @Test
+    void getMediaByDateRange_WhenFromDateIsGreaterThanToDate_ThrowsException() {
+        assertThrows(InputMismatchException.class, () -> mediaService.getMediaByDateRange(20200201, 20200101));
 
-        Page<Media> result = mediaService.getFilteredMedia(filters);
+        verify(mediaClient, never()).getAnimeByDateRange(any(), any());
+        verify(mediaRepository, never()).findByDateRange(anyInt(), anyInt());
+        verify(mediaRepository, never()).save(any(Media.class));
+    }
+    @Test
+    void getMediaByDateRange_WhenAnilistApiFails_ThrowsException() {
+        when(mediaClient.getAnimeByDateRange(20200101, 20200201)).thenThrow(new MediaClientException("API Error"));
+
+        MediaClientException exception = assertThrows(MediaClientException.class,() -> mediaService.getMediaByDateRange(20200101, 20200201));
+
+        assertTrue(exception.getMessage().contains("API Error"));
+
+        verify(mediaClient).getAnimeByDateRange(20200101, 20200201);
+        verify(mediaRepository, never()).save(any(Media.class));
+        verify(mediaRepository, never()).findByDateRange(anyInt(), anyInt());
+    }
+
+    @Test
+    void getMediaByDateRange_WhenMediaDoesNotExistLocally_SavesButLocalRepositoryReturnsEmptyList() {
+        List<MediaDto> apiMediaDtos = Collections.singletonList(testMediaDto);
+
+        when(mediaClient.getAnimeByDateRange(20200101, 20200201)).thenReturn(apiMediaDtos);
+        when(mediaRepository.findByAnilistId(testMediaDto.id())).thenReturn(Optional.empty());
+        when(mediaMapper.toEntity(testMediaDto)).thenReturn(testMedia);
+        when(mediaRepository.save(testMedia)).thenReturn(testMedia);
+        when(mediaRepository.findByDateRange(20200101, 20200201)).thenReturn(Collections.emptyList());
+
+        assertThrows(MediaNotFoundException.class, () -> mediaService.getMediaByDateRange(20200101, 20200201));
+
+        verify(mediaClient).getAnimeByDateRange(20200101, 20200201);
+        verify(mediaRepository).findByAnilistId(testMediaDto.id());
+        verify(mediaMapper).toEntity(testMediaDto);
+        verify(mediaRepository).save(testMedia);
+        verify(mediaRepository).findByDateRange(20200101, 20200201);
+    }
+
+    @Test
+    void getMediaByDateRange_WhenMediaDoesNotExistLocally_SavesAndReturnsMediaList() {
+        List<MediaDto> apiMediaDtos = Collections.singletonList(testMediaDto);
+        List<Media> expectedMedia = Collections.singletonList(testMedia);
+
+        when(mediaClient.getAnimeByDateRange(20200101, 20200201)).thenReturn(apiMediaDtos);
+        when(mediaRepository.findByAnilistId(testMediaDto.id())).thenReturn(Optional.empty());
+        when(mediaMapper.toEntity(testMediaDto)).thenReturn(testMedia);
+        when(mediaRepository.save(testMedia)).thenReturn(testMedia);
+        when(mediaRepository.findByDateRange(20200101, 20200201)).thenReturn(expectedMedia);
+
+        List<Media> result = mediaService.getMediaByDateRange(20200101, 20200201);
 
         assertNotNull(result);
         assertFalse(result.isEmpty());
-        assertEquals(1, result.getTotalElements());
-        assertTrue(result.getContent().get(0).getGenres().stream()
-                .anyMatch(genre -> genre.getName().equals("Action")));
+        assertEquals(1, result.size());
+        assertEquals(testMedia, result.getFirst());
+
+        verify(mediaClient).getAnimeByDateRange(20200101, 20200201);
+        verify(mediaRepository).findByAnilistId(testMediaDto.id());
+        verify(mediaMapper).toEntity(testMediaDto);
+        verify(mediaRepository).save(testMedia);
+        verify(mediaRepository).findByDateRange(20200101, 20200201);
+    }
+
+    @Test
+    void getMediaByDateRange_WhenMediaAlreadyExistsLocally_ReturnsMediaList() {
+        List<MediaDto> dtos = Collections.singletonList(testMediaDto);
+        List<Media> media = Collections.singletonList(testMedia);
+
+        when(mediaClient.getAnimeByDateRange(20200101, 20200201)).thenReturn(dtos);
+        when(mediaRepository.findByAnilistId(dtos.getFirst().id())).thenReturn(Optional.of(media.getFirst()));
+        when(mediaRepository.findByDateRange(20200101, 20200201)).thenReturn(media);
+
+        List<Media> result = mediaService.getMediaByDateRange(20200101, 20200201);
+
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.size());
+        assertEquals(2021, result.getFirst().getStartDate().getYear());
+    }
+
+    @Test
+    void getMediaByPage_whenPageIsNull_ThrowsException() {
+        assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByPage(null, 1));
+        verify(mediaRepository, never()).findAll(any(PageRequest.class));
+    }
+
+    @Test
+    void getMediaByPage_whenSizeIsNull_ThrowsException() {
+        assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByPage(1, null));
+        verify(mediaRepository, never()).findAll(any(PageRequest.class));
+    }
+
+    @Test
+    void getMediaByPage_whenPageIsEmpty_ThrowsException() {
+        when(mediaRepository.findAll(PageRequest.of(0, 50))).thenReturn(Page.empty());
+        assertThrows(MediaNotFoundException.class, () -> mediaService.getMediaByPage(0, 50));
+        verify(mediaRepository).findAll(PageRequest.of(0, 50));
     }
 
     @Test
@@ -193,5 +275,50 @@ class MediaServiceTest {
         assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByPage(-1, 20));
         assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByPage(0, 51));
         assertThrows(IllegalArgumentException.class, () -> mediaService.getMediaByPage(0, 0));
+    }
+
+    @Test
+    void getAllAnimeReleaseYear_WhenReleaseYearListIsEmpty_ThrowsException() {
+        when(mediaRepository.getAllMediaYears()).thenReturn(Collections.emptyList());
+        assertThrows(MediaNotFoundException.class, () -> mediaService.getAllAnimeReleaseYear());
+
+        verify(mediaRepository).getAllMediaYears();
+    }
+
+    @Test
+    void getAllAnimeReleaseYear_Success() {
+        when(mediaRepository.getAllMediaYears()).thenReturn(Stream.of(2018,2019,2020).collect(Collectors.toList()));
+
+        List<Integer> allAnimeReleaseYear = mediaService.getAllAnimeReleaseYear();
+
+        assertEquals(3, allAnimeReleaseYear.size());
+        assertEquals(2018, allAnimeReleaseYear.get(0));
+        assertEquals(2019, allAnimeReleaseYear.get(1));
+        assertEquals(2020, allAnimeReleaseYear.get(2));
+
+        verify(mediaRepository).getAllMediaYears();
+    }
+
+
+    @Test
+    void getFilteredMedia_WithGenreAndYearFilter() {
+        MediaFilterDto filters = new MediaFilterDto();
+        filters.setGenreFilter("Action");
+        filters.setYearFilter("2021");
+        filters.setEpisodeFilter("12");
+        filters.setPage(0);
+
+        testMedia.setGenres(Set.of(new Genre("Action")));
+
+        Page<Media> page = new PageImpl<>(Collections.singletonList(testMedia));
+        when(mediaRepository.findAll(any(), any(PageRequest.class))).thenReturn(page);
+
+        Page<Media> result = mediaService.getFilteredMedia(filters);
+
+        assertNotNull(result);
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.getTotalElements());
+        assertTrue(result.getContent().getFirst().getGenres().stream()
+                .anyMatch(genre -> genre.getName().equals("Action")));
     }
 }
